# quote-pricing-tool

./: Dockerfile  pyproject.toml
app/: README.md  main.py
app/db/: alembic.ini  dependencies.py  models.py  setup.py
app/db/alembic/: env.py
app/db/alembic/versions/: 4a99eea730cb_create_quotes_table.py
app/routers/: quote.py
app/services/: quote.py
app/static_types/: coverage.py  pricing.py  quote.py  state.py
app/tests/factory/: quote_factory.py
app/tests/mocks/: get_quote_price_response.py
app/tests/routers/: test_quote_router.py
app/tests/services/: test_quote_service.py
