[tool.poetry]
name = "quote-pricing-tool"
version = "0.1.0"
description = ""
authors = ["Vishal Parekh <vishalcparekh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.12.0"
pytest = "^7.4.2"
factory-boy = "^3.3.0"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
